# deep-person-reid

./: .flake8  .gitignore  .style.yapf  AWESOME_REID.html  AWESOME_REID.md  BENCHMARK.md  CLAUDE.md  DATASETS.md  Dockerfile  MODEL_ZOO.html  MODEL_ZOO.md  Makefile  README.md  README.rst  RELATED_PROJECTS.md  args.py  data.json  data_manager.py  dataset_loader.py  datasets.html  debug.py  dev_requirements.txt  environment.yml  eval_metrics.py  eval_metrics_multiprocessing.py  evaluation.html  genindex.html  index.html  linter.sh  losses.py  main.py  objects.inv  optimized_vector.py  optimizers.py  py-modindex.html  pyproject.toml  query.json  requirements.txt  run.py  samplers.py  (+22 more)
_deprecated/: args.py  train_vidreid_xent_htri.py
_modules/: index.html
_sources/: AWESOME_REID.md.txt  MODEL_ZOO.md.txt  datasets.rst.txt  evaluation.rst.txt  user_guide.rst.txt
_sources/pkg/: data.rst.txt  models.rst.txt  utils.rst.txt
_static/: documentation_options.js
configs/: im_osnet_ain_x1_0_softmax_256x128_amsgrad_cosine.yaml  im_osnet_ibn_x1_0_softmax_256x128_amsgrad.yaml  im_osnet_x0_25_softmax_256x128_amsgrad.yaml  im_osnet_x0_5_softmax_256x128_amsgrad.yaml  im_osnet_x0_75_softmax_256x128_amsgrad.yaml  im_osnet_x1_0_softmax_256x128_amsgrad.yaml  im_osnet_x1_0_softmax_256x128_amsgrad_cosine.yaml  im_pcbrpp6p_softmax_256x128_amsgrad_trainall.yaml  im_pcbrpp6p_softmax_256x128_amsgrad_trainrpp.yaml  im_r50_softmax_256x128_amsgrad.yaml  im_r50fc512_softmax_256x128_amsgrad.yaml
data_manager/: __init__.py  base.py  cuhk01.py  cuhk03.py  dukemtmcreid.py  dukemtmcvidreid.py  grid.py  ilids.py  ilidsvid.py  market1501.py  mars.py  msmt17.py  prid2011.py  prid450s.py  viper.py
deepreid/: __init__.py  eval_metrics.py  transforms.py
deepreid/data_manager/: __init__.py  cuhk01.py  cuhk03.py  dukemtmcvidreid.py  grid.py  ilids.py  ilidsvid.py  prid2011.py  prid450s.py  viper.py
deepreid/eval_lib/: setup.py  test_cython_eval.py
deepreid/losses/: __init__.py  cross_entropy_loss.py  hard_mine_triplet_loss.py
deepreid/models/: __init__.py
deepreid/utils/: logger.py
deprecated/: main.py  train_img_model_cent.py  train_img_model_ring.py  utils_deprecated.py
docs/: AWESOME_REID.md  MODEL_ZOO.md  conf.py  datasets.rst  evaluation.rst  index.rst  requirements.txt  tutorial.rst  user_guide.rst
docs/pkg/: data.rst  engine.rst  losses.rst  metrics.rst  models.rst  optim.rst  utils.rst
docs/resources/: MODEL_ZOO.md  model_zoo.rst
eval_lib/: Makefile  eval.pyx  test.py  test_cython_eval.py
losses/: ring_loss.py
models/: DPN.py  DeepAnytime.py  DenseNet.py  HACNN.py  Inception.py  InceptionResNetV2.py  InceptionV4.py  MobileNet.py  MuDeep.py  NASNet.py  ResNeXt.py  ResNet.py  SEResNet.py  ShuffleNet.py  SqueezeNet.py  Xception.py  __init__.py  densenet.py  hacnn.py  mobilenetv2.py  nasnet.py  resnet.py  resnext.py  seresnet.py  shufflenet.py  squeeze.py  xception.py
pkg/: data.html  engine.html  losses.html  metrics.html  models.html  optim.html  utils.html
projects/: README.md
projects/DML/: README.md  dml.py  im_osnet_x1_0_dml_256x128_amsgrad_cosine.yaml  main.py
projects/OSNet_AIN/: README.md  default_config.py  main.py  osnet_child.py  osnet_search.py  softmax_nas.py
projects/attribute_recognition/: main.py
scripts/: README.md  build_engine.py  default_config.py  default_parser.py  extract_features.py  main.py  main_test.py  register_dataset.py  test.py  train.py  train_resnet.py  train_simulation.py
ssd_mobilenet_v3/: Labels.txt  main.py
ssd_mobilenet_v3/ssd_mobilenet_v3_large_coco_2020_01_14/: model.ckpt.index  pipeline.config
stuff/: main.py
tools/: compute_mean_std.py  export.py  export_caffe.py  parse_test_res.py  visualize_actmap.py
tools/data_preparation/: select_RPIfield.py  select_recorded.py
torchreid/: __init__.py  data_manager.py  dataset_loader.py  eval_metrics.py  lr_schedulers.py  optimizers.py  samplers.py  transforms.py
torchreid/data/: __init__.py  datamanager.py  sampler.py  transforms.py
torchreid/data_manager/: __init__.py  bases.py  cuhk01.py  cuhk03.py  dukemtmcreid.py  dukemtmcvidreid.py  grid.py  ilids.py  ilidsvid.py  mars.py  msmt17.py  prid2011.py  prid450s.py  sensereid.py  viper.py
torchreid/datasets/: __init__.py  bases.py  (+15 more)
utils/: avgmeter.py  iotools.py  reidtools.py  torchtools.py
(+162 files in other folders)
