[tool.poetry]
name = "torchreid"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.4.0"
numpy = "^1.19.2"
tqdm = "^4.54.1"
boto3 = "^1.16.35"
tensorboard = "^2.4.1"
scikit-learn = "^0.24.1"
Cython  = "0.29.21"
h5py = "2.10.0"
Pillow = "8.1.0"
six = "1.15.0"
scipy = "1.6.0"
matplotlib = "3.3.4"
yacs = "0.1.8"
gdown = "3.12.2"
flake8 = "3.8.4"
yapf = "0.30.0"
isort = "4.3.21"
imageio = "2.9.0"
torchvision = "^0.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
